--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
-    "redux-resolver": "^1.0.2"
+    "redux-resolver": "^1.0.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
