--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "greeting-people",
   "version": "0.1.0",
+  "author": {
+    "name": "Juan Sanchez",
+    "email": "juanma0012@gmail.com",
+    "url": "https://www.linkedin.com/in/juanmanuels/"
+  },
   "private": true,
   "dependencies": {
     "prop-types": "^15.7.2",
