Updated README and the App's link to run on github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "greeting-people",
+  "homepage": "https://juanma0012.github.io/gretting-people",
   "version": "0.1.0",
   "author": {
     "name": "Juan Sanchez",
