Added unit testings for redux behaviors and added comment for utility's methods

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,13 @@
         "plugin:react/recommended"
     ],
     "globals": {
-        "document": true
+        "document": true,
+        "it": true,
+        "describe": true,
+        "expect": true,
+        "beforeEach": true,
+        "jest": true,
+        "module": true
     },
     "settings": {
         "react": {
