--- a/package.json
+++ b/package.json
@@ -1,38 +1,47 @@
 {
-  "name": "greeting-people",
-  "homepage": "https://juanma0012.github.io/gretting-people",
-  "version": "0.1.0",
-  "author": {
-    "name": "Juan Sanchez",
-    "email": "juanma0012@gmail.com",
-    "url": "https://www.linkedin.com/in/juanmanuels/"
-  },
-  "private": true,
-  "dependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-redux": "^6.0.1",
-    "react-scripts": "2.1.5",
-    "redux": "^4.0.1",
-    "redux-resolver": "^1.0.2",
-    "redux-thunk": "^2.3.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "eslint": "5.12.0",
-    "eslint-plugin-react": "^7.12.4"
-  }
+    "name": "greeting-people",
+    "homepage": "https://juanma0012.github.io/gretting-people",
+    "version": "0.1.0",
+    "author": {
+        "name": "Juan Sanchez",
+        "email": "juanma0012@gmail.com",
+        "url": "https://www.linkedin.com/in/juanmanuels/"
+    },
+    "private": true,
+    "dependencies": {
+        "prop-types": "^15.7.2",
+        "react": "^16.8.3",
+        "react-dom": "^16.8.3",
+        "react-redux": "^6.0.1",
+        "react-scripts": "2.1.5",
+        "redux": "^4.0.1",
+        "redux-resolver": "^1.0.2",
+        "redux-thunk": "^2.3.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --verbose ",
+        "eject": "react-scripts eject",
+        "lint": "eslint src/**/*.js"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "devDependencies": {
+        "enzyme": "^3.9.0",
+        "enzyme-adapter-react-16": "^1.10.0",
+        "enzyme-to-json": "^3.3.5",
+        "eslint": "5.12.0",
+        "eslint-plugin-react": "^7.12.4",
+        "react-test-renderer": "^16.8.4"
+    },
+    "jest": {
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ]
+    }
 }
